# ros2-pqc-secure-comm

./: .gitignore  Dockerfile  README.md  README_en.md  README_zh.md
.github/workflows/: ci.yml
docs/: architecture_en.md  architecture_zh.md  benchmark_app_sig.csv  benchmark_plain.csv  benchmark_plan_en.md  benchmark_plan_zh.md  benchmark_summary.md  message_spec_en.md  message_spec_zh.md  threat_model_en.md  threat_model_zh.md  tutorial_en.md  tutorial_zh.md
scripts/: run_and_plot_benchmark.py
src/keys/signer/: README.md
src/keys/trust/: trust_store.yaml
src/ros2_pqc_bench/: package.xml  setup.cfg  setup.py
src/ros2_pqc_bench/ros2_pqc_bench/: csv_writer.py  latency_runner.py  summary.py
src/ros2_pqc_bringup/: CMakeLists.txt  package.xml
src/ros2_pqc_bringup/config/: signer.yaml  verifier.yaml
src/ros2_pqc_bringup/launch/: app_sig.launch.py  bench_app_sig.launch.py  bench_plain.launch.py  plain.launch.py
src/ros2_pqc_crypto/: package.xml  setup.cfg  setup.py
src/ros2_pqc_crypto/ros2_pqc_crypto/: __init__.py  backend_base.py  constants.py  errors.py  generate_demo_keys.py  key_store.py  oqs_backend.py  replay_window.py
src/ros2_pqc_crypto/ros2_pqc_crypto/adapters/: __init__.py  base.py  twist_adapter.py
src/ros2_pqc_crypto/test/: test_crypto_core.py
src/ros2_pqc_demo/: package.xml  setup.cfg  setup.py
src/ros2_pqc_demo/ros2_pqc_demo/: raw_cmd_pub.py  verified_cmd_echo.py
src/ros2_pqc_interfaces/: CMakeLists.txt  package.xml
src/ros2_pqc_interfaces/msg/: SignedTwist.msg  VerificationEvent.msg
src/ros2_pqc_signer/: package.xml  setup.cfg  setup.py
src/ros2_pqc_signer/ros2_pqc_signer/: signer_node.py
src/ros2_pqc_verifier/: package.xml  setup.cfg  setup.py
src/ros2_pqc_verifier/ros2_pqc_verifier/: verifier_node.py
