<?xml version="1.0"?>
<package format="3">
  <name>ros2_pqc_bench</name>
  <version>0.1.0</version>
  <description>Benchmark runner and CSV summary tools for ros2-pqc-secure-comm.</description>
  <maintainer email="demo@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclpy</depend>
  <depend>ros2_pqc_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
