<?xml version="1.0"?>
<package format="3">
  <name>ros2_pqc_bringup</name>
  <version>0.1.0</version>
  <description>Bringup assets for ros2-pqc-secure-comm.</description>
  <maintainer email="demo@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ros2_pqc_signer</exec_depend>
  <exec_depend>ros2_pqc_verifier</exec_depend>
  <exec_depend>ros2_pqc_demo</exec_depend>
  <exec_depend>ros2_pqc_bench</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
