<?xml version="1.0"?>
<package format="3">
  <name>ros2_pqc_crypto</name>
  <version>0.1.0</version>
  <description>Crypto backend, adapter, and trust-store logic for ros2-pqc-secure-comm.</description>
  <maintainer email="REPLACE_WITH_PUBLIC_EMAIL">mike32874225@gmail.com</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
