<?xml version="1.0"?>
<package format="3">
  <name>ros2_pqc_demo</name>
  <version>0.1.0</version>
  <description>Demo publisher and echo nodes for ros2-pqc-secure-comm.</description>
  <maintainer email="REPLACE_WITH_PUBLIC_EMAIL">mike32874225@gmail.com</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
