<?xml version="1.0"?>
<package format="3">
  <name>ros2_pqc_verifier</name>
  <version>0.1.0</version>
  <description>ROS 2 verifier node for ros2-pqc-secure-comm.</description>
  <maintainer email="REPLACE_WITH_PUBLIC_EMAIL">mike32874225@gmail.com</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>ros2_pqc_crypto</depend>
  <depend>ros2_pqc_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
